homepage main section

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,31 +1,87 @@
-/* Inputs */
-.btn-check:focus + .btn,
-.btn:focus,
-textarea:focus,
-textarea.form-control:focus,
-input.form-control:focus,
-input[type='text']:focus,
-input[type='password']:focus,
-input[type='email']:focus,
-input[type='number']:focus,
-[type='text'].form-control:focus,
-[type='password'].form-control:focus,
-[type='email'].form-control:focus,
-[type='tel'].form-control:focus,
-[contenteditable].form-control:focus {
-	box-shadow: inset 0 -1px 0 #ddd;
+.marginTop {
+	margin-top: 60px;
 }
-/* NavBar */
-.navbar {
-	box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+/* HomePage */
+.homepage-main .hero-section {
+	margin-top: 50px;
 }
-.navbar .navbar-brand img {
-	width: 163px;
-	-webkit-user-drag: none;
+.homepage-main .hero-section form {
+	margin-top: 35px;
 }
-.navbar-expand-lg .navbar-collapse {
-	justify-content: flex-end;
+.homepage-main .content-section {
+	margin-top: 35px;
 }
-.navbar-light .navbar-toggler {
-	border: none;
+.homepage-main .content-section .quiz-cards {
+	margin-top: 20px;
+}
+
+.homepage-side {
+	position: relative;
+	margin-top: 35px;
+}
+.homepage-side .fixed-area {
+	position: fixed;
+	right: calc(var(--bs-gutter-x) * 1);
+	width: 30%;
+}
+
+/* QuizCard */
+.quizCard {
+	position: relative;
+	display: flex;
+	gap: 20px;
+	padding: 15px;
+	margin-bottom: 15px;
+	color: var(--dark);
+	background: #ffffff;
+	border: 1px solid #cccccc;
+	border-radius: 15px;
+}
+.quizCard .details {
+	width: calc(100% - 220px);
+	order: 1;
+}
+.quizCard .details p {
+	height: 100px;
+	margin: 16px 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.quizCard .details .interaction {
+	display: flex;
+	justify-content: space-between;
+}
+.quizCard .details .interaction span {
+	line-height: 39px;
+}
+.quizCard .image {
+	order: 2;
+	max-height: 220px;
+	background: #e9e9e9;
+	border-radius: 5px;
+	overflow: hidden;
+}
+.quizCard .image img {
+	width: 100%;
+}
+/* Media Queries */
+@media (max-width: 768px) {
+	.quizCard {
+		flex-direction: column;
+	}
+	.quizCard .details {
+		order: 2;
+		width: 100%;
+	}
+	.quizCard .image {
+		order: 1;
+		width: 100%;
+	}
+}
+@media (max-width: 992px) {
+	.homepage-side .fixed-area {
+		position: relative;
+		right: 0;
+		width: 100%;
+	}
 }
