--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,7 +57,7 @@
 	order: 1;
 }
 .quizCard .details p {
-	height: 100px;
+	max-height: 100px;
 	margin: 16px 0;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -67,17 +67,23 @@
 	justify-content: space-between;
 }
 .quizCard .details .interaction span {
-	line-height: 39px;
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 45px;
+	background: whitesmoke;
+	padding: 0px 20px;
+	border-radius: 5px;
 }
 .quizCard .image {
 	order: 2;
-	max-height: 220px;
+	max-width: 200px;
+	max-height: 200px;
 	background: #e9e9e9;
 	border-radius: 5px;
 	overflow: hidden;
 }
 .quizCard .image img {
-	width: 100%;
+	height: 100%;
 }
 
 /* QuizCard */
@@ -115,6 +121,21 @@
 	display: block;
 	background: #ffffff;
 	border-top: 1px solid #a0a0a0;
+}
+
+/* Login/Register */
+.centerAlign {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.centerAlign .joinForm {
+	width: 40%;
+	border: 1px solid lightgrey;
+	padding: 20px;
+	border-radius: 10px;
 }
 
 /* Media Queries */
