--- a/styles/index.css
+++ b/styles/index.css
@@ -86,7 +86,7 @@
 	height: 100%;
 }
 
-/* QuizCard */
+/* FAQs */
 .faqs {
 	margin-top: 15px;
 }
@@ -136,6 +136,52 @@
 	border: 1px solid lightgrey;
 	padding: 20px;
 	border-radius: 10px;
+}
+
+/* Create Quiz */
+.create-quiz {
+	margin-top: 30px;
+}
+.create-quiz .image-box {
+	position: relative;
+	width: 100%;
+	height: 12.5em;
+	background: #e6e6e6;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+}
+.create-quiz .image-box span {
+	position: absolute;
+	left: 20px;
+	bottom: 15px;
+	color: #556272;
+}
+.create-quiz .quiz-header,
+.create-quiz .add-questions {
+	margin: 20px 0 30px 0;
+}
+.create-quiz .quiz-header h1 {
+	font-size: 36px;
+}
+.create-quiz .quiz-header p {
+	font-size: 18px;
+	color: #556272;
+}
+.create-quiz .question {
+	padding: 25px 35px;
+	background: #ffffff;
+	border: 1px solid #cccccc;
+	border-radius: 15px;
+}
+.create-quiz .question h3 {
+	font-size: 24px;
+	color: #424242;
+}
+.create-quiz .question p {
+	color: #556272;
+}
+.create-quiz .add-questions {
+	margin: 20px 0 30px 0;
 }
 
 /* Media Queries */
