--- a/styles/bootstrap.scss
+++ b/styles/bootstrap.scss
@@ -1,3 +1,23 @@
+$primary: #387fd7;
+$secondary: #cccccc;
+$success: #cbf46a;
+$info: #92f6f1;
+$warning: #eebe77;
+$danger: #c64d56;
+$light: #f5f5f5;
+$dark: #556272;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+body {
+	padding: 0;
+	font-family: 'Poppins', sans-serif !important;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+@import 'bootstrap/scss/bootstrap.scss';
+
 /* Input Focus */
 .btn-check:focus + .btn,
 .btn:focus,
@@ -42,61 +62,22 @@ input[type='number']:focus,
 	display: inline;
 }
 
-/* Buttons */
 .btn {
 	padding: 10px 15px;
 	font-weight: 500;
-	font-size: 18px;
-	line-height: 27px;
-	color: #556272;
-	border: 1px solid #556272;
+	color: $dark;
+	border: 1px solid $dark;
 	border-radius: 5px;
 }
-.btn-dark {
-	background-color: var(--dark);
-}
-.btn-light {
-	background-color: var(--light);
-}
-.btn-info {
-	background-color: var(--info);
-}
-.btn-success {
-	background-color: var(--success);
-}
-.btn-warning {
-	background-color: var(--warning);
-}
-.btn-danger {
-	background-color: var(--danger);
-}
-.btn-secondary {
-	color: #ffffff;
-}
 .btn:hover {
-	color: #556272;
-	border: 1px solid #556272;
+	color: $dark;
+	border: 1px solid $dark;
 }
-.btn-dark:hover {
-	background-color: #334964;
-}
-.btn-light:hover {
-	background-color: #e6e6e6;
-}
-.btn-info:hover {
-	background-color: #6ce1db;
-}
-.btn-success:hover {
-	background-color: #b8e254;
-}
-.btn-warning:hover {
-	background-color: #e1a751;
-}
-.btn-danger:hover {
-	background-color: #c03641;
-}
-.btn-secondary:hover {
-	color: #f8f8f8;
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus {
+	color: #213043;
+	border: 1px solid #213043;
 }
 /* Inputs */
 textarea.form-control,
