--- a/styles/index.scss
+++ b/styles/index.scss
@@ -187,7 +187,8 @@
 /* Custom Inputs */
 .input-container {
 	position: relative;
-	background-color: #f3f3f3;
+	// background-color: #e6e6e6;
+	border: 1px solid #e6e6e6;
 	border-radius: 10px;
 
 	&:first-child {
@@ -204,7 +205,7 @@
 			height: 25px;
 			top: 0;
 			bottom: 0;
-			left: 5px;
+			left: 10px;
 			transform: translateY(40%);
 			background: none;
 			border: 2px solid #556272;
@@ -227,8 +228,9 @@
 		}
 	}
 	label {
-		margin-left: 40px;
+		margin-left: 45px;
 		padding: 10px 0;
+		color: #556272;
 	}
 }
 
