--- a/styles/index.scss
+++ b/styles/index.scss
@@ -190,9 +190,10 @@
 	// background-color: #e6e6e6;
 	border: 1px solid #e6e6e6;
 	border-radius: 10px;
+	margin-bottom: 10px;
 
-	&:first-child {
-		margin-bottom: 10px;
+	&:last-child {
+		margin-bottom: 0;
 	}
 	input[type='checkbox'],
 	input[type='radio'] {
