--- a/styles/index.scss
+++ b/styles/index.scss
@@ -183,15 +183,61 @@
 .create-quiz .add-questions {
 	margin: 20px 0 30px 0;
 }
+.create-quiz .question .options .btn-toolbar .input-group {
+	flex: 1;
+}
+
+/* Add Options */
+.create-quiz .question .options .add-option {
+	position: relative;
+	.option-toolbar {
+		position: absolute;
+		z-index: 1;
+		max-height: 400px;
+		overflow-y: scroll;
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+		width: 100%;
+		max-width: 310px;
+		bottom: 0;
+		transform: translateY(-50px);
+		background-color: #ffffff;
+		border: 1px solid #cccccc;
+		border-radius: 5px;
+		box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
+		&::-webkit-scrollbar {
+			display: none;
+		}
+		section {
+			border-bottom: 1px solid #cccccc;
+			padding: 9px 0;
+			label {
+				padding: 0 15px;
+				font-weight: 500;
+				font-size: 14px;
+				color: #cccccc;
+			}
+			.categories {
+				cursor: pointer;
+				padding: 5px 15px;
+				span {
+					margin-left: 10px;
+					color: #556272;
+				}
+				&:hover {
+					background-color: #f9f9f9;
+				}
+			}
+		}
+	}
+}
 
 /* Custom Inputs */
 .input-container {
 	position: relative;
-	// background-color: #e6e6e6;
 	border: 1px solid #e6e6e6;
 	border-radius: 10px;
 	margin-bottom: 10px;
-
 	&:last-child {
 		margin-bottom: 0;
 	}
