--- a/styles/index.scss
+++ b/styles/index.scss
@@ -139,6 +139,117 @@
 	border-radius: 10px;
 }
 
+/* Quiz Settings */
+.quiz-settings {
+	position: fixed;
+	z-index: 10;
+	inset: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(0, 0, 0, 0.025);
+	.setting-window {
+		user-select: none;
+		padding: 25px 0;
+		background: #fefefe;
+		border: 1px solid #cccccc;
+		box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+		border-radius: 15px;
+		.title-bar {
+			padding: 0 35px;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+
+			h5 {
+				font-weight: 400;
+				font-size: 24px;
+				color: #424242;
+			}
+			button {
+				height: fit-content;
+				padding: 0 5px;
+				background: #ffffff;
+				border: 1px solid #cccccc;
+				border-radius: 5px;
+				&:hover {
+					background: #fafafa;
+				}
+			}
+		}
+		.menu-bar {
+			margin: 10px 0;
+			padding: 0 35px;
+			display: flex;
+			align-items: center;
+			border-bottom: 1px solid #cccccc;
+			.menu {
+				cursor: pointer;
+				padding: 5px 15px;
+				font-size: 18px;
+				color: #556272;
+				&.active {
+					position: relative;
+					border-top-left-radius: 5px;
+					border-top-right-radius: 5px;
+					border: 1px solid #cccccc;
+					border-bottom: none;
+					&::after {
+						position: absolute;
+						content: '';
+						width: 100%;
+						height: 1px;
+						bottom: -1px;
+						left: 0;
+						background: #fefefe;
+					}
+				}
+			}
+		}
+		.client-area {
+			padding: 0 35px;
+			font-size: 18px;
+			color: #556272;
+
+			.option {
+				position: relative;
+				input[type='checkbox'] {
+					appearance: none;
+					&::before {
+						position: absolute;
+						cursor: pointer;
+						content: '';
+						width: 30px;
+						height: 30px;
+						inset: 8px;
+						background: none;
+						border-radius: 5px;
+						border: 1px solid #cccccc;
+					}
+					&:checked::before {
+						background: #92f6f1;
+						border-color: #556272;
+					}
+					&:checked::after {
+						position: absolute;
+						content: '';
+						width: 18px;
+						height: 16px;
+						inset: 14px;
+						top: 16px;
+						background: url(../assets/checkMark.svg);
+					}
+				}
+				label {
+					margin-left: 50px;
+					padding: 11px 0;
+					color: #556272;
+				}
+			}
+		}
+	}
+}
+
 /* Create Quiz */
 .create-quiz {
 	margin-top: 30px;
