--- a/styles/index.scss
+++ b/styles/index.scss
@@ -179,35 +179,47 @@
 				}
 			}
 		}
-		.menu-bar {
-			margin: 10px 0;
-			padding: 0 35px;
-			display: flex;
-			align-items: center;
-			border-bottom: 1px solid #cccccc;
-			.menu {
-				cursor: pointer;
-				padding: 5px 15px;
-				font-size: 18px;
-				color: #556272;
-				&.active {
-					position: relative;
-					border-top-left-radius: 5px;
-					border-top-right-radius: 5px;
-					border: 1px solid #cccccc;
-					border-bottom: none;
-					&::after {
-						position: absolute;
-						content: '';
-						width: 100%;
-						height: 1px;
-						bottom: -1px;
-						left: 0;
-						background: #fefefe;
+		.menu-bar-container {
+			overflow-x: scroll;
+			overflow-y: hidden;
+			-ms-overflow-style: none;
+			scrollbar-width: none;
+			&::-webkit-scrollbar {
+				display: none;
+			}
+			.menu-bar {
+				width: 120%;
+				margin: 10px 0;
+				padding: 0 35px;
+				display: flex;
+				align-items: center;
+				border-bottom: 1px solid #cccccc;
+				.menu {
+					cursor: pointer;
+					padding: 5px 15px;
+					font-size: 18px;
+					color: #556272;
+					&.active {
+						position: relative;
+						border-top-left-radius: 5px;
+						border-top-right-radius: 5px;
+						border: 1px solid #cccccc;
+						border-bottom: none;
+						&::after {
+							position: absolute;
+							z-index: 1;
+							content: '';
+							width: 100%;
+							height: 3px;
+							bottom: -2px;
+							left: 0;
+							background: #fefefe;
+						}
 					}
 				}
 			}
 		}
+
 		.client-area {
 			padding: 0 35px;
 			font-size: 18px;
