--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -1,8 +1,27 @@
-@media (max-width: 780px) {
+/* Media Queries */
+@media (max-width: 768px) {
+	.quizCard {
+		flex-direction: column;
+		.details {
+			order: 2;
+			width: 100%;
+		}
+		.image {
+			order: 1;
+			width: 100%;
+		}
+	}
 	.quiz-settings {
 		.setting-window {
 			min-width: 100%;
-			min-height: 450px;
 		}
+	}
+}
+
+@media (max-width: 992px) {
+	.homepage-side .fixed-area {
+		position: relative;
+		right: 0;
+		width: 100%;
 	}
 }
