--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -2,13 +2,18 @@
 @media (max-width: 768px) {
 	.quizCard {
 		flex-direction: column;
-		.details {
-			order: 2;
-			width: 100%;
-		}
+		gap: 5px;
 		.image {
 			order: 1;
 			width: 100%;
+		}
+		.details {
+			order: 2;
+			width: 100%;
+			padding-left: 0;
+			p {
+				-webkit-line-clamp: 3;
+			}
 		}
 	}
 	.quiz-settings {
@@ -29,5 +34,11 @@
 @media (max-width: 576px) {
 	.joinForm {
 		width: 95%;
+	}
+}
+
+@media (max-width: 375px) {
+	.quizCard .details .actions .buttons span {
+		display: none;
 	}
 }
