--- a/styles/index.scss
+++ b/styles/index.scss
@@ -423,14 +423,18 @@
 		display: inline-block;
 		padding: 10px 15px;
 		&:first-child {
-			padding-right: 5px;
 			border-top-left-radius: 5px;
 			border-bottom-left-radius: 5px;
+			&:not(input) {
+				padding-right: 5px;
+			}
 		}
 		&:last-child {
-			padding-left: 5px;
 			border-top-right-radius: 5px;
 			border-bottom-right-radius: 5px;
+			&:not(input) {
+				padding-left: 5px;
+			}
 		}
 	}
 }
